Add managed encrypted device backups
